--- a/app/src/main/res/layout/lay_float_video.xml
+++ b/app/src/main/res/layout/lay_float_video.xml
@@ -4,28 +4,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:layout_width="200dp"
-        android:layout_height="100dp"
+    <SurfaceView
         android:layout_marginRight="14dp"
-        android:layout_marginTop="14dp">
-
-        <com.example.shubowen.dragvideo.VideoView
-            android:id="@+id/video_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <TextView
-            android:id="@+id/tv_tip"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/black"
-            android:gravity="center"
-            android:text="正在加载中..."
-            android:textColor="@android:color/white"/>
-
-    </FrameLayout>
-
+        android:layout_marginTop="14dp"
+        android:id="@+id/video_view"
+        android:layout_width="200dp"
+        android:layout_height="100dp"/>
 
     <ImageView
         android:id="@+id/iv_remove"
